# serializer version: 1
# name: test_generated_alert_reaches_mobile_notify_service[android-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[android-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[android-no-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[android-no-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[ios-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[ios-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[ios-no-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_notify_service[ios-no-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'testtest',
      'title': 'TEst text test',
    }),
  })
# ---
